--- a/animalhealth.html
+++ b/animalhealth.html
@@ -161,7 +161,7 @@
             class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[55px] md:pb-[80px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Animal Health <br class="hidden max-sm:block" />
               Check
@@ -201,7 +201,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[130px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
           >
             Animal Health <br class="min-sm:hidden" />
             Check Exam
@@ -239,7 +239,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10 leading-[normal]"
           >
             Why Animal Health Checks Matter:
           </p>
@@ -765,7 +765,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mb-[28px]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mb-[28px]"
             data-aos="fade-right"
             data-aos-duration="500"
           >
@@ -806,7 +806,7 @@
         >
           <div class="max-w-[867px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[25px] leading-[normal]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[25px] leading-[normal]"
             >
               We look forward to <br class="min-[400px]:hidden" />
               seeing you and your
