--- a/carrer.html
+++ b/carrer.html
@@ -178,7 +178,7 @@
               class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
             >
               <p
-                class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mb-[30px] sm:mb-7"
+                class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal] mb-[30px] sm:mb-7"
               >
                 Join Our Nebula Vets Team:
               </p>
@@ -794,7 +794,7 @@
         >
           <div class="max-w-[829px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[46px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[46px] md:mb-[30px]"
             >
               Join our team
             </p>
