--- a/dental.html
+++ b/dental.html
@@ -161,7 +161,7 @@
             class="max-w-[660px] pt-[176px] md:pt-[134px] pb-[60px] md:pb-[76px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Dental Care
             </p>
@@ -200,7 +200,7 @@
         >
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Dentals - Scale & Polish
             </p>
@@ -216,7 +216,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               When to schedule a dental consultation
             </p>
@@ -233,7 +233,7 @@
           </div>
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Post Dental Care
             </p>
@@ -256,7 +256,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-[70px]">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 hidden sm:block"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10 hidden sm:block"
           >
             Why Choose Nebula Vets for Dental Care:
           </p>
@@ -779,7 +779,7 @@
           <p
             data-aos="fade-right"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-[28px] leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-[28px] leading-[normal]"
           >
             Experience Exceptional Dental Care at Nebula Vets:
           </p>
@@ -818,7 +818,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-5 leading-[normal]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-5 leading-[normal]"
             >
               We look forward to <br class="min-[400px]:hidden" />
               seeing you and your <br class="min-[400px]:hidden" />
