--- a/diagnostics.html
+++ b/diagnostics.html
@@ -161,7 +161,7 @@
             class="max-w-[631px] pt-[176px] md:pt-[133px] pb-[60px] md:pb-[80px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Diagnostics
             </p>
@@ -202,7 +202,7 @@
           data-aos-duration="1000"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[normal] mb-5 sm:mb-[30px]"
+            class="text-[#494336] text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl leading-[normal] mb-5 sm:mb-[30px]"
           >
             Available Tests
           </p>
@@ -757,7 +757,7 @@
           data-aos-duration="1000"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] leading-[normal] mb-[30px]"
+            class="text-[#494336] text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl leading-[normal] mb-[30px]"
           >
             Available Imaging
           </p>
@@ -1005,7 +1005,7 @@
       <div class="bg-white overflow-hidden">
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <h2
-            class="text-[#464334] text-2xl sm:text-4xl lg:text-[48px] text-gredient"
+            class="text-[#464334] text-2xl sm:text-4xl lg:text-5xl text-gredient"
           >
             Available SNAP Tests
           </h2>
@@ -1130,7 +1130,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[40px] leading-[normal]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[40px] leading-[normal]"
             >
               We look forward to seeing you and your pet soon!
             </p>
