--- a/emergencycare.html
+++ b/emergencycare.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[60px] md:pb-17"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
             >
               Urgent & Emergency Care
             </p>
@@ -197,7 +197,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[130px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -237,7 +237,7 @@
             arrive.
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-10 mb-6"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-10 mb-6"
             data-aos="fade-left"
             data-aos-duration="1000"
           >
@@ -253,7 +253,7 @@
             Their number is 123456
           </p>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-10 mb-6"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-10 mb-6"
             data-aos="fade-right"
             data-aos-duration="1000"
           >
@@ -286,7 +286,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10 leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10 leading-[normal]"
           >
             Why Choose Nebula Vets for Emergency and Urgent Care:
           </p>
@@ -896,7 +896,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-10 leading-[normal]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-10 leading-[normal]"
             >
               We look forward to <br class="min-[400px]:hidden" />
               seeing you and your <br class="min-[400px]:hidden" />
