--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         >
           <div class="max-w-[511px]">
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#494336] sm:text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#494336] sm:text-[#D7D9DD] leading-[normal]"
             >
               Welcome to <br />
               Nebula Vets
@@ -194,7 +194,7 @@
         >
           <div class="flex gap-[13px] sm:gap-[57px] max-sm:flex-col">
             <p
-              class="text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] text-[#494336] text-start"
+              class="text-2xl sm:text-[26px] md:text-3xl lg:text-4xl text-[#494336] text-start"
               data-aos="fade-right"
               data-aos-duration="1000"
             >
@@ -221,7 +221,7 @@
       <div class="bg-[#494336] overflow-hidden">
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <p
-            class="text-[#D7D9DD] text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] mb-10 max-sm:text-center md:mb-[58px] leading-[normal]"
+            class="text-[#D7D9DD] text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl mb-10 max-sm:text-center md:mb-[58px] leading-[normal]"
           >
             Why choose Nebula Vets?
           </p>
@@ -678,7 +678,7 @@
         data-aos-duration="1000"
       >
         <p
-          class="text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] text-[#494336] mb-[13px] md:mb-[20px] lg:mb-[30px] leading-[normal]"
+          class="text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl text-[#494336] mb-[13px] md:mb-[20px] lg:mb-[30px] leading-[normal]"
         >
           Our Services
         </p>
@@ -721,7 +721,7 @@
               </div>
               <div class="text-[#D7D9DD]">
                 <p
-                  class="text-2xl sm:text-[30px] lg:text-[36px] pt-6 sm:pt-7 md:pt-10 lg:pt-[50px]"
+                  class="text-2xl sm:text-3xl lg:text-4xl pt-6 sm:pt-7 md:pt-10 lg:pt-[50px]"
                 >
                   Preventive Care
                 </p>
@@ -763,7 +763,7 @@
               </div>
               <div class="text-[#D7D9DD]">
                 <p
-                  class="text-2xl sm:text-[30px] block lg:text-[36px] pt-3 sm:pt-7 md:pt-10 xl:whitespace-nowrap lg:pt-[30px]"
+                  class="text-2xl sm:text-3xl block lg:text-4xl pt-3 sm:pt-7 md:pt-10 xl:whitespace-nowrap lg:pt-[30px]"
                 >
                   Sick Patient Care
                 </p>
@@ -811,7 +811,7 @@
               </div>
               <div class="text-[#D7D9DD]">
                 <p
-                  class="text-2xl sm:text-[30px] block whitespace-nowrap lg:text-[36px] pt-3 sm:pt-7 md:pt-10 lg:pt-[33px]"
+                  class="text-2xl sm:text-3xl block whitespace-nowrap lg:text-4xl pt-3 sm:pt-7 md:pt-10 lg:pt-[33px]"
                 >
                   Surgery
                 </p>
@@ -847,7 +847,7 @@
               </div>
               <div class="text-[#D7D9DD]">
                 <p
-                  class="text-2xl sm:text-[30px] lg:text-[36px] pt-3 sm:pt-7 md:pt-10 lg:pt-[30px]"
+                  class="text-2xl sm:text-3xl lg:text-4xl pt-3 sm:pt-7 md:pt-10 lg:pt-[30px]"
                 >
                   Additional Services
                 </p>
@@ -914,9 +914,7 @@
               data-aos="fade-left"
               data-aos-duration="1000"
             >
-              <h2
-                class="text-2xl sm:text-[35px] lg:text-[48px] leading-[normal]"
-              >
+              <h2 class="text-2xl sm:text-[35px] lg:text-5xl leading-[normal]">
                 About Nebula Vets ?
               </h2>
               <p
@@ -964,7 +962,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] text-[#D7D9DD] mb-[13px] sm:mb-[20px] leading-[normal]"
+              class="text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl text-[#D7D9DD] mb-[13px] sm:mb-[20px] leading-[normal]"
             >
               Our Mission
             </p>
