--- a/location.html
+++ b/location.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Our Washington DC Practice
             </p>
@@ -200,7 +200,7 @@
               class="max-md:px-8 w-full md:w-[39.17%] flex flex-col gap-[38.5px] sm:gap-8 xl:ml-[100px] max-md:mt-15"
             >
               <p
-                class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px]"
+                class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl"
               >
                 Downtown
               </p>
@@ -211,7 +211,7 @@
                 Washington DC, 20003
               </p>
               <p
-                class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px]"
+                class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl"
               >
                 Opening Hours
               </p>
@@ -222,7 +222,7 @@
                 Sunday: Closed
               </p>
               <p
-                class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px]"
+                class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl"
               >
                 Contact
               </p>
@@ -284,7 +284,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] text-[#D7D9DD] mb-[40px] sm:mb-[60px] md:mb-[60px]"
+              class="text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl text-[#D7D9DD] mb-[40px] sm:mb-[60px] md:mb-[60px]"
             >
               Come visit us!
             </p>
