--- a/skin&dermatology.html
+++ b/skin&dermatology.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[116px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Skin & Dermatology
             </p>
@@ -195,7 +195,7 @@
           <p
             data-aos="zoom-in"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
           >
             Why Choose Nebula Vets for Dermatology and Skin Care:
           </p>
@@ -831,7 +831,7 @@
             class="max-w-[867px]"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
