--- a/telemedicine.html
+++ b/telemedicine.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[60px] md:pb-[100px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal] mr-8"
             >
               Telemedicine
             </p>
@@ -201,7 +201,7 @@
           <p
             data-aos="fade-right"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
           >
             Why use Telemedicine
           </p>
@@ -220,7 +220,7 @@
           <p
             data-aos="fade-left"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal] mt-[38px] sm:mt-10 mb-[18px] sm:mb-5"
           >
             During the online consultation
           </p>
@@ -277,7 +277,7 @@
             >
               <p class="text-[138px] text-linear-gradient leading-[107%]">1.</p>
               <p
-                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-[30px] lg:text-[32px] leading-[107%] mt-[12px] mb-8"
+                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-3xl lg:text-[32px] leading-[107%] mt-[12px] mb-8"
               >
                 Book a telemedicine consult
               </p>
@@ -299,7 +299,7 @@
             >
               <p class="text-[138px] text-linear-gradient leading-[107%]">2.</p>
               <p
-                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-[30px] lg:text-[32px] leading-[107%] mt-[12px] mb-8"
+                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-3xl lg:text-[32px] leading-[107%] mt-[12px] mb-8"
               >
                 Join with the link
               </p>
@@ -320,7 +320,7 @@
             >
               <p class="text-[138px] text-linear-gradient leading-[107%]">3.</p>
               <p
-                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-[30px] lg:text-[32px] leading-[107%] mt-[12px] mb-8"
+                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-3xl lg:text-[32px] leading-[107%] mt-[12px] mb-8"
               >
                 Video chat
               </p>
@@ -342,7 +342,7 @@
             >
               <p class="text-[138px] text-linear-gradient leading-[107%]">4.</p>
               <p
-                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-[30px] lg:text-[32px] leading-[107%] mt-[12px] mb-8"
+                class="text-[#D7D9DD] text-2xl sm:text-[26px] md:text-3xl lg:text-[32px] leading-[107%] mt-[12px] mb-8"
               >
                 Treatment
               </p>
@@ -393,7 +393,7 @@
             class="max-w-[530px]"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-10 leading-[109%]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-10 leading-[109%]"
             >
               We look forward to <br class="min-[400px]:hidden" />
               seeing you and your <br class="min-[400px]:hidden" />
