--- a/vaccination.html
+++ b/vaccination.html
@@ -175,7 +175,7 @@
             class="max-w-[660px] pt-[24px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[135px] pb-[50px] min-[950px]:pb-[78px] text-[#D7D9DD]"
           >
             <p
-              class="text-[32px] sm:text-[40px] mt-40 md:mt-0 md:text-[50px] lg:text-[60px] xl:text-[70px] leading-[normal]"
+              class="text-[32px] sm:text-[40px] mt-40 md:mt-0 md:text-[50px] lg:text-6xl xl:text-[70px] leading-[normal]"
             >
               Vaccinations
             </p>
@@ -218,7 +218,7 @@
             <p
               data-aos="fade-right"
               data-aos-duration="1000"
-              class="text-2xl sm:text-3xl lg:text-[36px]"
+              class="text-2xl sm:text-3xl lg:text-4xl"
             >
               Why should I vaccinate my pet?
             </p>
@@ -236,7 +236,7 @@
             <p
               data-aos="fade-left"
               data-aos-duration="1000"
-              class="text-2xl sm:text-3xl lg:text-[36px] mt-9"
+              class="text-2xl sm:text-3xl lg:text-4xl mt-9"
             >
               What are core and non-core vaccines?
             </p>
@@ -501,7 +501,7 @@
         <div
           class="max-w-[1160px] px-8 sm:px-10 pb-[60px] pt-10 sm:py-[80px] mx-auto"
         >
-          <h2 class="text-[#464334] text-2xl sm:text-4xl lg:text-[48px]">
+          <h2 class="text-[#464334] text-2xl sm:text-4xl lg:text-5xl">
             When to vaccinate?
           </h2>
           <div class="text-[#D7D9DD] mt-10">
@@ -519,7 +519,7 @@
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/puppies.png" alt="puppies" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient leading-[normal] xl:whitespace-nowrap"
+                        class="text-2xl sm:text-4xl lg:text-5xl text-linear-gradient leading-[normal] xl:whitespace-nowrap"
                       >
                         Puppies Schedule
                       </p>
@@ -569,7 +569,7 @@
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/kitten.png" alt="kitten" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient leading-[normal]"
+                        class="text-2xl sm:text-4xl lg:text-5xl text-linear-gradient leading-[normal]"
                       >
                         Kitten Schedule
                       </p>
@@ -619,7 +619,7 @@
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/puppies.png" alt="puppies" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient"
+                        class="text-2xl sm:text-4xl lg:text-5xl text-linear-gradient"
                       >
                         Adult Dog Schedule
                       </p>
@@ -649,7 +649,7 @@
                     <div class="flex items-center gap-5">
                       <img src="./assetes/img/png/kitten.png" alt="kitten" />
                       <p
-                        class="text-2xl sm:text-4xl lg:text-[48px] text-linear-gradient"
+                        class="text-2xl sm:text-4xl lg:text-5xl text-linear-gradient"
                       >
                         Adult Cat Schedule
                       </p>
@@ -698,7 +698,7 @@
             class="max-w-[867px]"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-5"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-5"
             >
               We look forward to <br class="min-[400px]:hidden" />
               seeing you and your
