--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
             class="max-w-[528px] pt-[35px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal] max-[400px]:!mb-[330px] max-[500px]:!mb-[420px] max-[600px]:!mb-[500px] max-[700px]:!mb-[600px] max-[768px]:mb-[660px]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal] max-[400px]:!mb-[330px] max-[500px]:!mb-[420px] max-[600px]:!mb-[500px] max-[700px]:!mb-[600px] max-[768px]:mb-[660px]"
             >
               About <br />
               Nebula Vets
@@ -386,7 +386,7 @@
           data-aos-duration="1000"
         >
           <p
-            class="text-2xl sm:text-[30px] md:text-[40px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] text-center mb-[50px] sm:mb-15"
+            class="text-2xl sm:text-3xl md:text-[40px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] text-center mb-[50px] sm:mb-15"
           >
             Meet our veterinary team:
           </p>
