--- a/hospice&euthanasia.html
+++ b/hospice&euthanasia.html
@@ -161,7 +161,7 @@
             class="max-w-[674px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Hospice & Euthanasia
             </p>
@@ -199,7 +199,7 @@
         >
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Euthanasia Service
             </p>
@@ -216,7 +216,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Compassionate Support
             </p>
@@ -234,7 +234,7 @@
           </div>
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Open Communication
             </p>
@@ -251,7 +251,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Tailored End-of-Life Services
             </p>
@@ -267,7 +267,7 @@
           </div>
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Supportive Environment
             </p>
@@ -284,7 +284,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Aftercare Options
             </p>
@@ -323,7 +323,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
