--- a/lasertheropy.html
+++ b/lasertheropy.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Laser Therapy
             </p>
@@ -209,7 +209,7 @@
           <p
             data-aos="fade-right"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[20px] sm:mb-6"
           >
             What is Laser Therapy?
           </p>
@@ -228,7 +228,7 @@
           <p
             data-aos="fade-left"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[20px] sm:mb-6"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[20px] sm:mb-6"
           >
             How Does Laser Therapy Work?
           </p>
@@ -252,7 +252,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
           >
             Benefits of Laser Therapy:
           </p>
@@ -810,7 +810,7 @@
             data-aos-duration="1000"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
