--- a/pharmacy.html
+++ b/pharmacy.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Pharmacy
             </p>
@@ -200,7 +200,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 pt-[60px] sm:pt-20 pb-[120px] sm:pb-[140px] relative z-[1]"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-5 sm:mb-[30px]"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-5 sm:mb-[30px]"
           >
             How it works
           </p>
@@ -233,7 +233,7 @@
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
           >
             Why Choose our Pharmacy:
           </p>
@@ -765,7 +765,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[30px]"
           >
             Experience Exceptional Pharmacy Services at Nebula Vets:
           </p>
@@ -804,7 +804,7 @@
             class="max-w-[530px]"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[45px] leading-[109%]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[45px] leading-[109%]"
             >
               We look forward to seeing you and your pet soon!
             </p>
