--- a/sevices.html
+++ b/sevices.html
@@ -164,7 +164,7 @@
             class="max-w-[660px] pt-[30px] sm:pt-[50px] md:pt-[80px] lg:pt-[100px] xl:pt-[140px] pb-[274px] min-[950px]:pb-[75px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Veterinary <br class="hidden max-sm:block" />
               Services
@@ -302,28 +302,28 @@
             class="flex flex-wrap items-center justify-between !gap-y-5 gap-x-10"
           >
             <button
-              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] border-solid border-b-[1px] tab-btn"
+              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-3xl lg:text-4xl border-solid border-b-[1px] tab-btn"
               id="btn1"
               onclick="openTab(1)"
             >
               Preventive Care
             </button>
             <button
-              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] border-solid border-b-[1px] tab-btn"
+              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-3xl lg:text-4xl border-solid border-b-[1px] tab-btn"
               id="btn2"
               onclick="openTab(2)"
             >
               Sick Patient Care
             </button>
             <button
-              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] border-solid border-b-[1px] tab-btn"
+              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-3xl lg:text-4xl border-solid border-b-[1px] tab-btn"
               id="btn3"
               onclick="openTab(3)"
             >
               Surgery
             </button>
             <button
-              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] border-solid border-b-[1px] tab-btn"
+              class="text-[#D7D9DD] leading-[normal] opacity-50 text-2xl sm:text-[26px] md:text-3xl lg:text-4xl border-solid border-b-[1px] tab-btn"
               id="btn4"
               onclick="openTab(4)"
             >
@@ -349,7 +349,7 @@
               />
               <div class="px-8 lg:pl-6">
                 <p
-                  class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
+                  class="text-[#494336] text-[32px] md:text-4xl lg:text-[42px] xl:text-5xl mt-[3px]"
                 >
                   Preventive Care
                 </p>
@@ -479,7 +479,7 @@
               />
               <div class="px-8 lg:pl-6">
                 <p
-                  class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
+                  class="text-[#494336] text-[32px] md:text-4xl lg:text-[42px] xl:text-5xl mt-[3px]"
                 >
                   Sick Patient Care
                 </p>
@@ -627,7 +627,7 @@
               />
               <div class="px-8 lg:pl-6">
                 <p
-                  class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
+                  class="text-[#494336] text-[32px] md:text-4xl lg:text-[42px] xl:text-5xl mt-[3px]"
                 >
                   Surgery
                 </p>
@@ -730,7 +730,7 @@
               />
               <div class="px-8 lg:pl-6">
                 <p
-                  class="text-[#494336] text-[32px] md:text-[36px] lg:text-[42px] xl:text-[48px] mt-[3px]"
+                  class="text-[#494336] text-[32px] md:text-4xl lg:text-[42px] xl:text-5xl mt-[3px]"
                 >
                   Additional Services
                 </p>
@@ -906,7 +906,7 @@
         <div class="max-w-[1160px] px-8 sm:px-10 py-15 sm:py-[80px] mx-auto">
           <div class="max-w-[568px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] lg:text-[42px] xl:text-[48px] text-[#D7D9DD] mb-[20px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl lg:text-[42px] xl:text-5xl text-[#D7D9DD] mb-[20px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
