--- a/surgery.html
+++ b/surgery.html
@@ -161,7 +161,7 @@
             class="max-w-[664px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Surgery
             </p>
@@ -202,7 +202,7 @@
           <p
             data-aos="fade-right"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
           >
             Does my pet need a pre-consultation?
           </p>
@@ -220,7 +220,7 @@
           <p
             data-aos="fade-left"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
           >
             How much will it cost?
           </p>
@@ -249,7 +249,7 @@
           <p
             data-aos="fade-right"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[18px] sm:mb-5"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[18px] sm:mb-5"
           >
             Do you accept insurance?
           </p>
@@ -276,7 +276,7 @@
           <p
             data-aos="zoom-in"
             data-aos-duration="1000"
-            class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] mb-10"
+            class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl mb-10"
           >
             Why Choose Nebula Vets for Your Pet's Surgery:
           </p>
@@ -733,7 +733,7 @@
           class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20"
         >
           <p
-            class="text-[#494336] text-2xl md:text-[30px] lg:text-[36px] leading-[normal] mb-[30px]"
+            class="text-[#494336] text-2xl md:text-3xl lg:text-4xl leading-[normal] mb-[30px]"
           >
             Choose Nebula Vets for Exceptional Surgical Care:
           </p>
@@ -771,7 +771,7 @@
         >
           <div class="max-w-[867px]">
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
