--- a/travel.html
+++ b/travel.html
@@ -161,7 +161,7 @@
             class="max-w-[660px] pt-[176px] md:pt-[140px] pb-[65px] md:pb-[90px]"
           >
             <p
-              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-[60px] xl:text-[70px] text-[#D7D9DD] leading-[normal]"
+              class="text-[32px] sm:text-[40px] md:text-[50px] lg:text-6xl xl:text-[70px] text-[#D7D9DD] leading-[normal]"
             >
               Travel
             </p>
@@ -198,7 +198,7 @@
         >
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Pet Travel Certificates
             </p>
@@ -214,7 +214,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Documentation Assistance
             </p>
@@ -232,7 +232,7 @@
           </div>
           <div data-aos="fade-right" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               Domestic Travel
             </p>
@@ -247,7 +247,7 @@
           </div>
           <div data-aos="fade-left" data-aos-duration="1000">
             <p
-              class="text-[#494336] text-2xl sm:text-[26px] md:text-[30px] lg:text-[36px] leading-[normal]"
+              class="text-[#494336] text-2xl sm:text-[26px] md:text-3xl lg:text-4xl leading-[normal]"
             >
               International Travel
             </p>
@@ -293,7 +293,7 @@
             class="max-w-[867px]"
           >
             <p
-              class="text-2xl sm:text-[30px] md:text-[36px] text-[#D7D9DD] mb-[32px] md:mb-[30px]"
+              class="text-2xl sm:text-3xl md:text-4xl text-[#D7D9DD] mb-[32px] md:mb-[30px]"
             >
               We look forward to seeing you and your pet soon!
             </p>
