--- a/about.html
+++ b/about.html
@@ -261,8 +261,12 @@
     <!--  -->
     <section>
       <div class="bg-[rgba(215,217,221,0.50)] relative overflow-hidden">
-        <div class="absolute bottom-0">
-          <img src="./assetes/img/png/about-img-2-bg-img.png" alt="bg-img" />
+        <div class="absolute bottom-0 w-full">
+          <img
+            class="w-full"
+            src="./assetes/img/png/about-img-2-bg-img.png"
+            alt="bg-img"
+          />
         </div>
         <div
           class="max-w-[1160px] px-8 sm:px-10 mx-auto py-15 sm:py-20 flex justify-between gap-y-15 gap-15 max-lg:flex-wrap-reverse relative z-[1]"
