--- a/carrer.html
+++ b/carrer.html
@@ -322,7 +322,14 @@
       </section>
     </div>
     <!--  -->
-    <section class="overflow-hidden">
+    <section class="overflow-hidden relative">
+      <div class="w-full absolute bottom-[-80px]">
+        <img
+          class="w-full"
+          src="./assetes/img/png/health-exam-bg-img.png"
+          alt="bg-img"
+        />
+      </div>
       <div class="max-w-[1160px] mx-auto px-8 sm:px-10 py-15 sm:py-20">
         <div>
           <p
