--- a/vaccination.html
+++ b/vaccination.html
@@ -202,9 +202,9 @@
     <!-- Why should I vaccinate my pet? -->
     <section>
       <div class="relative bg-[rgba(215,217,221,0.50)] overflow-hidden">
-        <div class="absolute bottom-0">
+        <div class="absolute bottom-0 w-full">
           <img
-            width="100%"
+            class="w-full"
             src="./assetes/img/png/health-exam-bg-img.png"
             alt="absolute"
           />
