--- a/carrer.html
+++ b/carrer.html
@@ -323,7 +323,7 @@
     </div>
     <!--  -->
     <section class="overflow-hidden relative">
-      <div class="w-full absolute bottom-[-80px]">
+      <div class="w-full absolute bottom-[-80px] hidden sm:block">
         <img
           class="w-full"
           src="./assetes/img/png/health-exam-bg-img.png"
